--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 Django==5.0.4
+django-environ==0.11.2
 h11==0.14.0
 idna==3.7
 outcome==1.3.0.post0
