--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ attrs==23.2.0
 beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
-Django==5.0.4
+Django~=4.2.13
 django-environ==0.11.2
 h11==0.14.0
 idna==3.7
@@ -21,3 +21,4 @@ trio-websocket==0.11.1
 typing_extensions==4.11.0
 urllib3==2.2.1
 wsproto==1.2.0
+six~=1.16.0
