--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ attrs==23.2.0
 beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
-Django~=4.2.13
+Django==4.2.13
+django-bootstrap-v5==1.0.11
 django-environ==0.11.2
+django-positions==0.6.0
 h11==0.14.0
 idna==3.7
 outcome==1.3.0.post0
@@ -12,6 +14,8 @@ psycopg2==2.9.9
 PySocks==1.7.1
 requests==2.31.0
 selenium==4.20.0
+setuptools==70.0.0
+six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
@@ -21,4 +25,5 @@ trio-websocket==0.11.1
 typing_extensions==4.11.0
 urllib3==2.2.1
 wsproto==1.2.0
-six~=1.16.0
+
+gunicorn
