--- a/scrape-menu/project.yml
+++ b/scrape-menu/project.yml
@@ -5,12 +5,12 @@ packages:
           runtime: python:default
           web: false
           environment:
-            DB_NAME: "${_self.DATABASE}"
-            DB_PASSWORD: "${self_.PASSWORD}"
-            DB_USER: "${_self.USERNAME}"
-            DB_HOST: "${_self.HOSTNAME}"
-            DB_PORT: "${_self.PORT}"
-            DB_URL: "${_self.DATABASE_URL}"
+            DB_NAME: "${DB_NAME}"
+            DB_PASSWORD: "${DB_PASSWORD}"
+            DB_USER: "${DB_USER}"
+            DB_HOST: "${DB_HOST}"
+            DB_PORT: "${DB_PORT}"
+            DB_URL: "${DB_URL}"
           limits:
             timeout: 30000
             memory: 512
