--- a/terpalert/requirements.txt
+++ b/terpalert/requirements.txt
@@ -3,13 +3,16 @@ attrs==23.2.0
 beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
+dj-database-url==2.2.0
 Django==4.2.13
 django-bootstrap-v5==1.0.11
 django-environ==0.11.2
 django-positions==0.6.0
+djangorestframework==3.15.2
 h11==0.14.0
 idna==3.7
 outcome==1.3.0.post0
+psycopg==3.1.19
 psycopg2==2.9.9
 PySocks==1.7.1
 requests==2.31.0
@@ -25,6 +28,3 @@ trio-websocket==0.11.1
 typing_extensions==4.11.0
 urllib3==2.2.1
 wsproto==1.2.0
-dj-database-url==2.2.0
-
-gunicorn
