--- a/scrape-menu/project.yml
+++ b/scrape-menu/project.yml
@@ -10,7 +10,7 @@ packages:
             MAILGUN_URL: "${MAILGUN_URL}"
             MAILGUN_EMAIL: "${MAILGUN_EMAIL}"
           limits:
-            timeout: 120000
+            timeout: 3000000
             memory: 1024
 
 
